--- a/online/index.html
+++ b/online/index.html
@@ -13,5 +13,6 @@
     <script src="./indexeddb.shim.min.js"></script>
     <script src="./promise.js"></script>
     <script src="./application.js"></script>
+    <script src="./fetch.js"></script>
   </body>
 </html>
