--- a/pdfViewer/index.html
+++ b/pdfViewer/index.html
@@ -61,6 +61,6 @@
         </div>
 
         <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
-        <script src="js\main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
