Start of img offline

--- a/online/index.html
+++ b/online/index.html
@@ -26,8 +26,8 @@
     <!-- Scripts -->
     <script src="./indexeddb.shim.min.js"></script>
     <script src="./promise.js"></script>
-    <script src="./application.js"></script>
-    <script src="./main.js"></script>
+    <!--<script src="./application.js"></script> -->
+    <script src="./imageFile.js"></script>
     <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
   </body>
 </html>
