Comments, Mac cmd, and non-functional Buttons

--- a/viewer2/index.html
+++ b/viewer2/index.html
@@ -6,11 +6,15 @@
 </head>
 
 <body>
-	<h1>PDF.js Previous/Next example</h1>
+	<h1>PDF Name</h1>
 
 	<div>
 	<button id="prev">Previous</button>
 	<button id="next">Next</button>
+	<button id="zoom-in">+</button>
+	<button id="zoom-out">-</button>
+	<button id="offline"> Save to Offline Mode</button>
+	<button id="share">Share</button>
 	&nbsp; &nbsp;
 
 
@@ -25,6 +29,7 @@
 	<script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/keystrokes.js"></script>
+	<script src="js/share.js"></script>
 </body>
 </html>
 
