--- a/viewer2/index.html
+++ b/viewer2/index.html
@@ -21,7 +21,12 @@
 	<span>Page: <span id="page_num"></span> / <span id="page_count"></span></span>
 	</div>
 
+	<!-- Displays the array of keys, For demonstation purposes only-->
 	<p id="log">hi</p>
+
+	<div id="share-box">
+
+	</div>
 
 
 	<canvas id="the-pdf"></canvas>
