Initiallize share box

--- a/viewer2/index.html
+++ b/viewer2/index.html
@@ -25,7 +25,8 @@
 	<p id="log">hi</p>
 
 	<div id="share-box">
-
+		Share Link:
+		<button id="share-close" style="float:right;">X</button>
 	</div>
 
 
