added https and more button features

--- a/viewer2/index.html
+++ b/viewer2/index.html
@@ -23,16 +23,16 @@
 
 	<!-- Displays the array of keys, For demonstation purposes only-->
 	<p id="log">hi</p>
-
+	
 	<div id="share-box">
-		Share Link:
 		<button id="share-close" style="float:right;">X</button>
+		<p id="sharelink">error</p>
 	</div>
 
 
 	<canvas id="the-pdf"></canvas>
 
-	<script src="//mozilla.github.io/pdf.js/build/pdf.js"></script>
+	<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 	<script src="js/main.js"></script>
 	<script src="js/keystrokes.js"></script>
 	<script src="js/share.js"></script>
