functional share link and button organization

--- a/viewer2/index.html
+++ b/viewer2/index.html
@@ -21,13 +21,13 @@
 	</div>
 
 	<!-- Displays the array of keys, For demonstation purposes only-->
-	<p id="log">hi</p>
+	<p id="log">log error</p>
 	
 	<!-- Taken from https://www.addtoany.com/buttons/for/website -->
 	<div id="share-box">
 		<button id="share-close" style="float:right;">X</button>
 		<h2>Share!</h2>
-		<input type= "text" value=hi id="sharelink">
+		<input type= "text" value=www.google.com id="sharelink">
 		<button onclick="copyLink()">Copy link</button>
 		<div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-title="PDF Share">
 			<!--<a class="a2a_dd" href="https://www.addtoany.com/share"></a> This is the code to give you UNLIMITED options,
@@ -37,6 +37,7 @@
 			<a class="a2a_button_yahoo_mail"></a>
 			<a class="a2a_button_email"></a>
 		</div>
+		<p>Disclaimer: PDF only visable by those with access to distribution _ because ...</p>
 	</div>
 
 
@@ -45,6 +46,7 @@
 
 	<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script> <!--The PDF Viewer JS-->
 	<script src="js/main.js"></script><!--The main site functionality and PDF rendering JS-->
+	<script src="js/buttons.js"></script><!--The main site functionality -->
 	<script src="js/keystrokes.js"></script> <!-- The Keystroke limiter JS-->
 	<script src="js/share.js"></script> <!--The share box JS-->
 	<script async src="https://static.addtoany.com/menu/page.js"></script> <!-- The share by email button JS-->
