--- a/viewer2/index.html
+++ b/viewer2/index.html
@@ -37,7 +37,7 @@
 			<a class="a2a_button_yahoo_mail"></a>
 			<a class="a2a_button_email"></a>
 		</div>
-		<p>Disclaimer: PDF only visable by those with access to distribution _ because ...</p>
+		<p>Disclaimer: PDF only visable by those with access to distribution statement _ because ...</p>
 	</div>
 
 
