--- a/online/index.html
+++ b/online/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Karan's Offline Document Database</h1>
 
-    <!-- Type something text form, allows users to submit words to database-->
+    Type something text form, allows users to submit words to database
     <form>
       <input placeholder="Type something" />
     </form>
@@ -26,8 +26,8 @@
     <!-- Scripts -->
     <script src="./indexeddb.shim.min.js"></script>
     <script src="./promise.js"></script>
-    <!--<script src="./application.js"></script> -->
-    <script src="./imageFile.js"></script>
+    <script src="./application.js"></script>     
+     <!-- <script src="./imageFile.js"></script> -->
     <script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
   </body>
 </html>
