--- a/angularPDF/viewer2Angular/src/index.html
+++ b/angularPDF/viewer2Angular/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- Displays the array of keys, For demonstation purposes only-->
+	<p id="log">log error</p>
   <app-root></app-root>
 </body>
 </html>
