--- a/angularPDF/demo/src/index.html
+++ b/angularPDF/demo/src/index.html
@@ -6,9 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="assets/fontawesome-free-5.14.0-web/css/all.min.css" rel="stylesheet">
+  <link href="assets/fontawesome-free-5.14.0-web/css/all.min.css" rel="stylesheet"> <!-- We use FontAwesome for all the icons -->
 </head>
 <body>
-  <app-root></app-root>
+  <app-root></app-root> <!-- app.component -->
 </body>
 </html>
